--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Online stamp shop</description>
 	<properties>
 		<java.version>21</java.version>
+		<dotenv.version>4.0.0</dotenv.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -27,6 +28,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>${dotenv.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
