--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:postgresql://dpg-cnbiea5a73kc73fhp3j0-a.oregon-postgres.render.com:5432/online_shop_c0rb
-spring.datasource.username=online_shop_c0rb_user
-spring.datasource.password=x8eShHJYVik8UKPcd15EVVuCaVzgfE7R
+# Database
+spring.datasource.url=${DB_URL_LOCAL}
+spring.datasource.username=${DB_USERNAME_LOCAL}
+spring.datasource.password=${DB_PASSWORD_LOCAL}
