--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@
 spring.datasource.url=${DB_URL_LOCAL}
 spring.datasource.username=${DB_USERNAME_LOCAL}
 spring.datasource.password=${DB_PASSWORD_LOCAL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=db/changelog/db-changelog-master.yaml
+
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
