--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,16 @@ spring.liquibase.change-log=db/changelog/db-changelog-master.yaml
 
 # JPA
 spring.jpa.open-in-view=false
+
+# Hibernate SQL logging
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# Hibernate statistics logging
+spring.jpa.properties.hibernate.generate_statistics=true
+
+# Logging level for Hibernate SQL
+logging.level.org.hibernate.SQL=INFO
+
+
