--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<dotenv.version>4.0.0</dotenv.version>
+		<hypersistence.version>3.5.3</hypersistence.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -53,7 +54,7 @@
 		<dependency>
 			<groupId>io.hypersistence</groupId>
 			<artifactId>hypersistence-utils-hibernate-62</artifactId>
-			<version>3.5.3</version>
+			<version>${hypersistence.version}</version>
 		</dependency>
 	</dependencies>
 
