--- a/src/main/resources/db/changelog/db-changelog-master.yaml
+++ b/src/main/resources/db/changelog/db-changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/v1/changeset-v1.0.sql
+        file: db/changelog/products/v1.0.0-create-db-products.sql
+  - include:
+      file: db/changelog/product_details/v1.0.0-create-db-product_details.sql
